--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
